finish bill func and style

--- a/src/assets/styles/button.css
+++ b/src/assets/styles/button.css
@@ -20,3 +20,15 @@
     border-top-left-radius: 5px;
     border-bottom-left-radius:5px ;
 }
+
+.btn-bill{
+    background-color: rgb(194, 2, 2);
+    color: #fff;
+    border: none;
+    align-items: center;
+    font-weight: 600;
+    font-size: 15px;
+    cursor: pointer;
+    padding: 8px;
+    border-radius: 4px;
+}
